"Fix menu on mobile"

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -358,7 +358,6 @@ footer {
     margin-top: 40px;
     margin-left: auto;
     margin-right: auto;
-    z-index: 1;
   }
 
   .bio {
